# tanaka

./: .gitignore  README.md  noxfile.py  pyproject.toml  ruff.toml
i18n/: en-US.json  ja.json
tanaka/: __main__.py  bot.py  config.py
tanaka/extensions/: _app_emoji.py  emoji.py
tanaka/utils/: i18n.py
